--- a/.github/workflows/auto-rebuild.yml
+++ b/.github/workflows/auto-rebuild.yml
@@ -16,6 +16,13 @@ jobs:
   check-and-rebuild:
     runs-on: ubuntu-latest
     steps:
+
+      - name: set lower case owner name
+        run: |
+          echo "REPOSITORY_LC=${REPOSITORY,,}" >>${GITHUB_ENV}
+        env:
+          REPOSITORY: '${{ github.repository }}'
+
       - name: Checkout
         uses: actions/checkout@v4
         
@@ -123,8 +130,8 @@ jobs:
           build-args: |
             GIST_HASH=${{ steps.gist-hash.outputs.hash }}
           tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
+            ghcr.io/${{ REPOSITORY_LC }}:latest
+            ghcr.io/${{ REPOSITORY_LC }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           labels: |
