--- a/.github/workflows/auto-rebuild.yml
+++ b/.github/workflows/auto-rebuild.yml
@@ -29,6 +29,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to DockerHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           
       - name: Get current base image digest
         id: base-digest
@@ -147,6 +153,15 @@ jobs:
           REPO_LOWER=$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]')
           echo "repo_lower=$REPO_LOWER" >> $GITHUB_OUTPUT
           echo "Lowercase repo: $REPO_LOWER"
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: |
+            frisy/jackett-ygg
+            ghcr.io/${{ github.repository }}
+
       - name: Build and push
         if: steps.check-rebuild.outputs.rebuild == 'true'
         uses: docker/build-push-action@v5
@@ -159,10 +174,12 @@ jobs:
           tags: |
             ghcr.io/${{ steps.repo-lower.outputs.repo_lower }}:latest
             ghcr.io/${{ steps.repo-lower.outputs.repo_lower }}:${{ github.sha }}
+            ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           labels: |
             org.opencontainers.image.visibility=public
+            ${{ steps.meta.outputs.labels }}
           
       - name: Update tracking variables
         if: steps.check-rebuild.outputs.rebuild == 'true'
